--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+file_example_MP4_480_1_5MG.mp4 filter=lfs diff=lfs merge=lfs -text
+prediction.gif filter=lfs diff=lfs merge=lfs -text
